Update الخواص المُمَيِزة للمنصات المعرفة الرقمية.md

--- a/الخواص المُمَيِزة للمنصات المعرفة الرقمية.md
+++ b/الخواص المُمَيِزة للمنصات المعرفة الرقمية.md
@@ -41,7 +41,7 @@ classDef b fill:#f0f8ff,stroke:#1e90ff;
 *يمثّل الرسم مساراً دائرياً: البيانات تُولّد أوّلاً في Bookation/Newsation، تُخزَّن بفهارس GKU، ثم تعود لتُستهلك أو تُحفَّز عبر العِلم و Scenarioation.*
 
 ### 3 – ضوابط منع التداخل والتشتيت  
-1. **حوكمة الوظائف**: عقود سمارت تحظر نشر الأخبار في Bookation أو الكتب في Newsation.  
+1. **حوكمة الوظائف**: عقود ذكية تحظر نشر الأخبار في Bookation أو الكتب في Newsation.  
 2. **مخطط API موحَّد**: يضمن أن تستدعي كل منصة فقط نقاط النهاية التي تخصّها (لغة “أقل امتيازاً”).  
 3. **معرّف معرفي واحد** لكل محتوى في GKU للحد من الازدواجية.
 
